tests/test_files/type_checker/bad_callee.stderr
error: unknown identifier `bar`
- type_checker/bad_callee:2:4
2 |     bar(msg)
  |     ^^^
