tests/test_files/type_checker/bad_callee.lark
def foo(msg: bool,) -> bool {
    bar(msg)
    //~ ERROR: unknown identifier `bar`
}
